# puc-cnpj-survival

./: 1_Tratamento_dos_dados.ipynb  2_Explorando_os_dados.ipynb  3_Modelo_COX.ipynb  4_Modelo_Failure.ipynb  6_Kaplan_Meier.ipynb  pyproject.toml
